[package]
name = "bad-hashish"
version = "0.1.0"
authors = ["bryan newbold <bnewbold@robocracy.org>"]

[dependencies]
clap = "2"
error-chain = "0.10"
log = "0.3"
env_logger = "0.3"
reqwest = "0.6.2"
zip = "0.2.3"
tar = "0.4.12"
flate2 = "0.2.19"
tree_magic = "0.2.0"
rust-crypto = "0.2.36"
crc = "1.4.0"
csv = "1.0.0-beta.3"
data-encoding = "1.2.0"

# Maybe...
#rayon = "0.7.0"
